# PuckSim

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md
.claude/: settings.local.json
Source/: Goal.cpp  Goal.h  JoltSetup.cpp  JoltSetup.h  Layers.cpp  Layers.h  Listeners.h  MeshData.h  Player.cpp  Player.h  Puck.cpp  Puck.h  PuckSim.cpp  Rink.cpp  Rink.h  Scenarios.cpp  Scenarios.h  Stick.cpp  Stick.h  Telemetry.cpp  Telemetry.h
docs/: known-issues.md  phase1-guide.md  phase10-plan.md  phase11-guide.md  phase2-guide.md  phase3-guide.md  phase4-guide.md  phase5-guide.md  phase6-guide.md  phase7-guide.md  phase8-guide.md  phase9-guide.md  physics-values.md  rl-roadmap.md
tools/: extract_meshes.py
